--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,8 +17,6 @@
       {{/if}}
     </nav>
     {{{body}}}
-    {{#if isLoggedIn}}
-      <script src='/js/logout.js'></script>
-    {{/if}}
+    <script src='/js/main.js'></script>
   </body>
 </html>
